<resources>
    <string name="app_name">Simple News App</string>
    <string name="health">Health</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="sports">Sports</string>
    <string name="science">Science</string>
    <string name="technology">Technology</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="todo">TODO</string>
</resources>